Improve introduction of the Manual

--- a/Manual/Manual.tex
+++ b/Manual/Manual.tex
@@ -14,7 +14,7 @@
 \maketitle
 \section{General purpose}
 These scripts are designed to create automatically settings files for the \textsc{CropMetaPop} simulation software in order to realize a sensibility analysis of its parameters.
-It creates a experiment plan to realize anova analysis of 2 factors
+It creates a experiment plan to realize anova analysis of 2 factors, the settings files corresponding to this experiment plan, and the launcher files to run both the simulations and the analysis on a cluster that uses condor 
 
 
 \section{List of the files}
