--- a/Manual/Manual.tex
+++ b/Manual/Manual.tex
@@ -23,7 +23,13 @@ It creates a experiment plan to realize anova analysis of 2 factors, the setting
         \item \textbf{setGenExpPlanA.py} Script that uses the experiment plan (5 parameters) for experiment A (drift + selection)
         \item \textbf{setGenExpPlanB.py} Script that uses the experiment plan (9 parameters) for experiment B (drift + selection + colonisation)
         \item \textbf{setGenExpPlanC.py} Script that uses the experiment plan (9 parameters) for experiment C (drift + selection + migration)
-    \end{itemize}
+\end{itemize}
 
-
+\section{Protocol}
+\begin{enumerate}
+        \item Modify the file \textbf{expPlan.R} to the desired number of parameters and levels of parameters depending on the experiment. You can also modify the name of the output file (MyData.csv by default).
+    \item Launch \textbf{expPlan.R} using \texttt{Rscript expPlan.R}. It creates the file containing the fractional experiment plan.
+    \item Launch the python script corresponding to the experiment after modifying the name of the input file containing the experiment plan (MyData.csv) using \texttt{python setGenExpPlan}X\texttt{.py} with X the experiment to create.
+    \item This creates a set of settings files for the \textsc{CropMetaPop} model (ending with \textsc{.set}), along with a file called \textbf{launcher} that contains the commands to launch the experiments using \texttt{condor\_submit}, and a \textbf{launcherR} file that contains the corresponding command to launch the analysis using \texttt{condor\_submit}.
+\end{enumerate}
 \end{document}
